--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,17 @@
-<H1>Upload Image</H1>
-<<%= link_to "New Upload", :action => "new" %>
+<div class="container">
+	<H1 class='text-center'>Upload Image</H1>
+	<%= link_to "New Upload", :action => "new" %>
+	<% @users.each do |user| %>
+	<div class="row is-flex">
+
+		<div class="col-xs-12 col-sm-6" style="max-height: 300px;">
+			<%= image_tag user.avatar.url, :class => "img-rounded img-fluid thumbnail", :style => "overflow: hidden; " %>
+		</div>
+		<div class="col-xs-12 col-sm-6 thumbnail">	
+			<%= user.text %>
+		</div>	
+	</div>
+	<% end %>
+	</div>
+</div>
+
